removed layout bugs

--- a/css/style.css
+++ b/css/style.css
@@ -47,10 +47,12 @@ body {
 /* card styles */
 
 .card {
+  border-radius: 1rem;
   display: flex;
   flex-direction: column;
+  margin: 1rem 0;
   padding: 2rem;
-  border-radius: 1rem;
+  width: 100%;
 }
 
 .card--shadow {
@@ -58,7 +60,16 @@ body {
 }
 
 .card__btn {
-  align-self: flex-end;
+  display: flex;
+  align-self: center;
+}
+@media screen and (min-width: 768px) {
+  .card {
+    width: 80%;
+  }
+  .card__btn{
+    align-self: flex-end;
+  }
 }
 
 /* Container */
@@ -73,11 +84,19 @@ body {
 }
 
 /* Todo */
+
+.todo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .todo__header {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  align-self: flex-start;
 }
 
 .todo__heading {
@@ -86,7 +105,14 @@ body {
   display: inline-block;
 }
 
+.todo__item{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 3rem 0;
+}
 .todo__result {
+  margin: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -97,38 +123,40 @@ body {
   .todo__header {
     flex-direction: row;
   }
-  .todo__item {
-    width: 80%;
-  }
 }
 
 /* List */
 .list {
-  padding: 2rem;
+  width: 100%;
+  padding: 0;
   list-style: none;
 }
 
 /* form */
 
-.text {
+.form__field {
+  overflow: hidden;
   display: grid;
-  row-gap: 0.5rem;
-}
-
-.text input[type="text"] {
-  border: 0;
-  border-bottom: 1px solid #333;
-  outline: 0;
-}
-field {
+  row-gap: 1rem;
   margin: 1rem;
 }
 
+.form__field input[type="text"] {
+  border: 0;
+  border-bottom: 2px solid #333;
+  outline: 0;
+}
+.form__btn {
+  margin-top: 2rem;
+}
+
 @media screen and (min-width: 768px) {
-  .text {
+  .form__field {
     grid-template-columns: 1fr 4fr;
     column-gap: 1rem;
-    margin: 2rem;
+  }
+  .form__btn {
+    margin-top: 5rem;
   }
 }
 /* hide form */
